# house-of-bao

./: AGENTS.md  ARCHITECTURE.org  DWIM.org  LICENSE  README.org  bounding-box.org  decisions.org  error.org  eval-notebook.org  levels.org  levels.org_archive  note.txt  playtests.org
.beads/: issues.jsonl
convos/: 20251111--brainstorming-levels__moist_claude.org  20251113__claude.org  20251113__zo.org  20251114__banana.org
evals/: batch_log.jsonl  easy-fails.org  emoji-examples.txt  eval-notebook.org  evaluation-thoughts.org  incorrect-claude.txt  pyproject.toml  results.json  results.json.bak  sample_results.json  sample_results_readable.json  test_cases.json  text-excerpts.org
house-of-bao/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
house-of-bao/public/: manifest.webmanifest
house-of-bao/src/: App.css  App.tsx  Game.css  Game.tsx  PhysicsSandbox.tsx  design-tokens.css  index.css
house-of-bao/src/components/: ActionGlyphs.tsx  AxiomActionPanel.tsx  Footer.tsx  FormPreview.tsx  MobileActionPanel.tsx  MobileInfoDrawer.tsx  RadialMenu.css  RadialMenu.tsx  TutorialOverlay.css  TutorialOverlay.tsx
house-of-bao/src/dialects/: BoundingSandbox.tsx
house-of-bao/src/hooks/: useAvailableOperations.test.ts  useAvailableOperations.ts  useIsMobile.ts
house-of-bao/src/levels/: index.ts  loader.test.ts  loader.ts  rawLevels.ts  serializer.ts  types.ts
house-of-bao/src/logic/: Arrangement.ts  Axioms.test.ts  Axioms.ts  Form.test.ts  Form.ts  Inversion.ts  arrangement.ts  index.ts  inversion.ts  reflection.ts  win.ts
(+29 files in other folders)
