[project]
name = "lof-evals"
version = "0.1.0"
description = "Laws of Form arithmetic evaluation suite"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.39",
    "google-genai>=1.53.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
]

[tool.uv]
dev-dependencies = []
